--- a/TM.RestHour/Views/help/index.cshtml
+++ b/TM.RestHour/Views/help/index.cshtml
@@ -28,7 +28,41 @@
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                This is the login page of the RestHours  Application . Users can login via this page.
+                                <p>This is the login page of the RestHours  Application. Users can login via this page.</p>
+                                <p><strong>There are three types of users who can log in.</strong></p>
+                                <p><strong>1.</strong>	Super Admin</p>
+                                <p><strong>2.</strong>	Admin.</p>
+                                <p><strong>3.</strong>	Normal Users.</p>
+
+                                <p><strong>A Super Admin User can perform the following:</strong></p>
+                                <p><strong>a)</strong>	Manage Crew</p>
+                                <p><strong>b)</strong>	Create New Department</p>
+                                <p><strong>c)</strong>	Manage Ranks</p>
+                                <p><strong>d)</strong>	Set Default Regime of vessel</p>
+                                <p><strong>e)</strong>	Set Mail Server Details </p>
+                                <p><strong>f)</strong>	Reset Password</p>
+                                <p><strong>g)</strong>	Maintain Time Adjustment </p>
+                                <p><strong>h)</strong>	Manage Vessel Details</p>
+                                <p><strong>i)</strong>	Manage Company Details</p>
+                                <p><strong>j)</strong>	View timesheet data of all users for any date</p>
+                                <p><strong>k)</strong>	View Several Reports</p>
+
+                                <p><strong>An Admin User can perform the following:</strong></p>
+                                <p><strong>a)</strong>	Manage Crew</p>
+                                <p><strong>b)</strong>	Create New Department</p>
+                                <p><strong>c)</strong>	Manage Ranks</p>
+                                <p><strong>d)</strong>	Set Default Regime of vessel</p>
+                                <p><strong>e)</strong>	Reset Password</p>
+                                <p><strong>f)</strong>	Maintain Time Adjustment </p>
+                                <p><strong>g)</strong>	View Vessel Details</p>
+                                <p><strong>h)</strong>	View timesheet data of all users in his department</p>
+                                <p><strong>i)</strong>	View Several Reports</p>
+
+                                <p><strong>A general User can perform the following:</strong></p>
+                                <p><strong>a)</strong>	View Vessel Details</p>
+                                <p><strong>b)</strong>	Reset his own password</p>
+                                <p><strong>c)</strong>	Fill in his own timesheet data</p>
+                                <p><strong>d)</strong>	View Monthly Work Hours and Compliance Report</p>
                                 <img src="~/background/HLogin.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
@@ -140,7 +174,7 @@
                         </div>
                         <div id="collapsetwo1" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can see the current Vessel, Flag, IMO Number.
+                                In this page user can view and update the current Vessel, Flag, IMO Number.
                                 <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
@@ -154,7 +188,7 @@
                         </div>
                         <div id="collapsetwo11" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can Reset the Password.
+                                In this page user can Reset the Password.
                                 <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -168,7 +202,7 @@
                         </div>
                         <div id="collapsetwo111" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page a crew can see his own Work Hours by Month.
+                                In this page a crew can view his own Work Hours by Month.
                                 <img src="~/background/HMonthlyWorkHours.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
@@ -182,7 +216,7 @@
                         </div>
                         <div id="collapsetwo1111" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page a crew can see his own Compliance Report by Month.
+                                In this page a crew can view his own Compliance Report by Month.
                                 <img src="~/background/HComplianceReport.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
@@ -248,7 +282,7 @@
                         </div>
                         <div id="collapsefour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page a Admin can see all Active and InActive Users.
+                                In this page a Admin can view all Active and InActive Users.
                                 <img src="~/background/HCrewList.png" style="width: 100%; float: right;" width="42" height="500">
                             </div>
                         </div>
@@ -264,7 +298,7 @@
                         </div>
                         <div id="collapsefive" class="panel-collapse collapse">
                             <div class="panel-body">
-                                xxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                A SuperAdmin/Admin user can update the service terms of the crew via this screen.
                                 <img src="~/background/HCrewServiceTerms.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -280,7 +314,7 @@
                         </div>
                         <div id="collapsesix" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can Add, Update and Delete a Department.
+                                In this page Admin can Add, Update and Delete a Department.
                                 <img src="~/background/HDepartment.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -296,7 +330,7 @@
                         </div>
                         <div id="collapseseven" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can Add, Update and Delete a Rank.
+                                In this page Admin can Add, Update and Delete a Rank.
                                 <img src="~/background/HManageRank.png" style="width: 100%; float: right;" width="42" height="400">
 
                             </div>
@@ -313,7 +347,7 @@
                         </div>
                         <div id="collapseight" class="panel-collapse collapse">
                             <div class="panel-body">
-                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                A Super Admin/Admin user can set the default Regime of a vessel . All compliance calculations will be calculated as per the selected regime.
                                 <img src="~/background/HRegime.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -329,7 +363,7 @@
                         </div>
                         <div id="collapsenine" class="panel-collapse collapse">
                             <div class="panel-body">
-                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                A Super Admin User can set/update the mail server details that are needed to communicate to the AdminCenter .
                                 <img src="~/background/HMailServerDetails.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -345,7 +379,7 @@
                         </div>
                         <div id="collapseaa" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can Reset the Password.
+                                In this page Admin can Reset the Password.
                                 <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -361,7 +395,8 @@
                         </div>
                         <div id="collapsebb" class="panel-collapse collapse">
                             <div class="panel-body">
-                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                The Super Admin/Admin user can modify the time based on which compliance calculations are done
+                                The available time adjustments are a) +1H b) -1H c) +1D d) -1D
                                 <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
@@ -375,7 +410,7 @@
                         </div>
                         <div id="collapsetwo1119" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can see the current Vessel, Flag, IMO Number.
+                                In this page Admin can view and update the current Vessel, Flag, IMO Number.
                                 <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
@@ -384,21 +419,102 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119">Manage Vessel Details(For Admin)</a>
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo11199">Company Details</a>
                             </h4>
                         </div>
-                        <div id="collapsetwo1119" class="panel-collapse collapse">
+                        <div id="collapsetwo11199" class="panel-collapse collapse">
                             <div class="panel-body">
-                                In this page we can see the current Vessel, Flag, IMO Number.
-                                <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
+                                In this page Admin can get the current Company Details.
+                                <img src="~/background/HCompanyDetails.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
                     </div>
 
+
+
+
+
+
+
+
+
+
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119961">Daily Work and Rest Hour(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119961" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page Admin can view Daily Work and Rest Hour by Date.
+                                <img src="~/background/HDailyWorkandRestHour.png" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119962">IMO Crew List(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119962" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page Admin can view IMO Crew List and can print.
+                                <img src="~/background/HIMOCrewList.png" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119963">Monthly View(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119963" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page Admin can view Monthly Report by Month.
+                                <img src="~/background/HMonthlyView.png" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119964">Monthly Work Hours(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119964" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page Admin can view Monthly Work Hours Report by Crew and Date.
+                                <img src="~/background/HMonthlyWorkHours.png" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119965">Compliance Report</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119965" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page Admin can view Compliance Report by Crew and Date.
+                                <img src="~/background/HComplianceReport.png" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
-
 
     </div>
 </body>
