fixed toggle - time 2 data load

--- a/TM.RestHour/Views/TimeSheet/Index.cshtml
+++ b/TM.RestHour/Views/TimeSheet/Index.cshtml
@@ -1957,7 +1957,7 @@
 			//var isdataValid = ValidateTime();
 			var reg = /^([01]\d|2[0-3])([03][0])$/;
 			if (!ValidateTime()) {
-				toastr.error("Invalid Data. Please re-enter ha ha.");
+				toastr.error("Invalid Data. Please re-enter .");
 				validData = false;
 				//toastr.options = {
 				//	"positionClass": "toast-top-full-width"
