--- a/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
+++ b/TM.RestHour/Views/TimeSheet/CrewTimeSheet.cshtml
@@ -1804,6 +1804,7 @@
 
 		function GetCrewBookedHours(getCrewBookedHours) {
 
+           // console.log(getCrewBookedHours);
 			return $.ajax({
 				url: getCrewBookedHours,
 				data:
@@ -1958,7 +1959,7 @@
 			//var isdataValid = ValidateTime();
 			var reg = /^([01]\d|2[0-3])([03][0])$/;
 			if (!ValidateTime()) {
-				toastr.error("Invalid Data. Please re-enter ha ha.");
+				toastr.error("Invalid Data. Please re-enter .");
 				validData = false;
 				//toastr.options = {
 				//	"positionClass": "toast-top-full-width"
