--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -117,14 +117,14 @@
                                 </li>
 
                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -139,6 +139,9 @@
                                         <li><a href="@Url.Action("Index", "Equipments")" style="border:none;">Medical Equipment</a></li>
                                     </ul>
                                 </li>
+
+                                
+                                <li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>
 
                             </ul>
                         </li>
