--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
                                 </li>
 
                                 
-                                <li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>
+                                @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
 
                             </ul>
                         </li>
